# FateForger

./: ._tmp_payload.json  .env.template  .env.test  .flake8  .gitattributes  .gitignore  AGENTS.md  AGENT_INTEGRATION_SUMMARY.md  AGENT_INTENT_DETERMINISM_AUDIT.md  AGENT_PLATFORM.md  CALENDAR_QUERY_LOCATIONS.md  CALENDAR_WATCH_SERVER_ENHANCEMENT_SUMMARY.md  CANCELLED_SESSION_IMPLEMENTATION_SUMMARY.md  CLEANUP_SUMMARY.md  DEVELOPMENT.md  DOCS_INDEX.md  DOCUMENTATION_SETUP_SUMMARY.md  Dockerfile  FATEFORGER_RENAME_SUMMARY.md  GOOGLE_CALENDAR_MCP_GUIDE.md  HAUNTER_SLACK_INTEGRATION_COMPLETE.md  MCP_IMPLEMENTATION_COMPLETE.md  MIGRATION_ARCHIVE_TO_CALENDAR_HAUNTER.md  MODULAR_PLANNING_IMPLEMENTATION_SUMMARY.md  Makefile  PLANNER_BOT_IMPLEMENTATION.md  POETRY_GUIDELINES.md  POETRY_SOLUTION_SUMMARY.md  QUICK_REFERENCE.txt  README.md  README_CALENDAR_MCP.md  SETUP.md  SETUP_UPSTREAM_MCP.md  SLACK_INTEGRATION_COMPLETE.md  SLACK_ROUTER_IMPLEMENTATION_SUMMARY.md  STRUCTURED_INTENT_IMPLEMENTATION.md  TASK_3_IMPLEMENTATION_SUMMARY.md  TICKET_1_COMPLETION.md  TICKET_2_COMPLETION.md  TICKET_3_IMPLEMENTATION_SUMMARY.md  (+64 more)
.cline/skills/: agent-slack
.devcontainer/: devcontainer.json
.github/: architect.chatmode.md  ask.chatmode.md  code.chatmode.md  copilot-instructions.md  debug.chatmode.md  pull_request_template.md
.github/instructions/: instructions.instructions.md
.github/workflows/: deploy-docs.yml  notebook-workflow-checks.yml
alembic/: env.py
alembic/versions/: 14ece55ca4f6_create_calendar_events_calendar_.py  a3daabe987df_add_base_event_model_and_enhanced_.py  b3e8cf2a9d5f_add_planning_bootstrap_sessions.py  f886a323ad4e_add_slack_scheduled_message_id_and_.py
archive/productivity_bot/: autogen_planner.py  models.py  prompt_templates.py  slack_utils.py
data/: .gitkeep  README.md  graphiti_memory.json
docs/: README.md  calendar-haunter.md  change_log.md  constraint_flow.d2  constraints.md  fateforger_observability_audit_playbook.md  index.md  issue_branch_mece_taxonomy.md  timeboxing-stage3-validation.md
docs/api/: autogen_planner.md  common.md  haunter_bot.md  models.md  planner_bot.md  scheduler.md
docs/architecture/: agents.md  constraint-flow.d2  constraint-flow.md  data-models.md  design.md  overview.md  proposal_object_contract.md  scheduling.md  timeboxing_refactor.md
docs/deployment/: configuration.md  docker.md
docs/development/: contributing.md  setup.md  testing.md
docs/indices/: adapters.md  adapters_notion.md  agents_receptionist.md  agents_revisor.md  agents_strategy.md  agents_tasks.md  agents_timeboxing.md  debug.md  haunt.md  llm.md  schedular_models.md  setup_wizard.md  setup_wizard_templates.md  tools.md  tools_config.md  trmnl_frontend_src.md
docs/javascripts/: agents.js
docs/plans/: 2026-03-08-timeboxing-session-constraint-override-design.md  2026-03-08-timeboxing-session-constraint-override.md  2026-03-10-d2-story-viewer.md  2026-03-12-graphiti-debug-stack-alignment.md
docs/posts/: agentic-dev-system-blog.md  fateforger_observability_series.md
docs/setup/: development.md  installation.md  testing.md  ticktick-integration-complete.md  ticktick-mcp-setup.md
docs/stash_backups/: stash_0_issue_22.patch  stash_1_issue_41.patch
docs/stylesheets/: extra.css
example_diagrams/c2f/: README.md  c2f_indexer_deployment.d2  index.html  narrative-data.js  narrative-page.js
examples/: calendar_haunter_example.py  calendar_queries.py
fateforger/: __main__.py
fateforger/actions/: __init__.py  base.py  bootstrap.py
fateforger/agents/: __init__.py  planner_agent.py  planning.py  router.py  sync_stub.py
fateforger/contracts/: __init__.py  calendar_event.py
fateforger/core/: config.py  scheduler.py  slack.py
fateforger/haunters/: __init__.py  base.py  (+2 more)
infra/: Dockerfile.bot  Dockerfile.mcp  Dockerfile.ticktick-mcp  Dockerfile.ticktick-mcp-fixed  Dockerfile.ticktick-mcp.new  docker-compose-2.yml  docker-compose.yml
logic-to-visual/: README.md
memory-bank/: activeContext.md  architect.md  decisionLog.md  progress.md  projectBrief.md  systemPatterns.md
notebooks/: AGENTS.md  README.md  caniconal_agent.ipynb  clean_working_mcp.ipynb  getting_it_working.ipynb  making_timebox_session_stage_4_work.ipynb  minimal_working_mcp.ipynb  notion_mcp.ipynb  openrouter_request_shape.ipynb  patching_json.ipynb  phase5_integration_test.ipynb  submit_timebox_to_cal.ipynb  test_calendar_agent.ipynb  test_constraint_extractor.ipynb  test_timebox_storage.ipynb  ticktick_agent.ipynb  todo_agent_ticktick.ipynb
observability/: AGENTS.md  README.md  docker-compose.yml
review-system/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
scripts/: README.md  __init__.py  auth_calendar.sh  constraint_mcp_server.py  dev_utils.py  docker_utils.py  init_db.py  migrate_notion_constraints_to_mem0.py  run_mem0_migration.sh  seed_constraint_types.py  setup_test_db.py  timebox_patch_demo.py
slack/: manifest.json
src/: __init__.py  readme.md
tests/: README.md  conftest.py  test_actions.py  test_agent_integration.py  test_agent_parsing.py  test_autogen_integration.py  test_autogen_planner.py  test_base_haunter.py  test_bootstrap_flow.py  test_calendar_sync.py  test_common.py  test_complete_calendar_sync.py  test_comprehensive_structured_system.py  test_contracts.py  test_final_implementation.py  test_haunt_comprehensive.py  test_haunt_integration.py  test_haunter.py  test_haunter_handoff.py  test_implementation_validation.py  test_integration_calendar_sync.py  test_mcp_integration.py  test_minimal.py  test_models.py  test_planner.py  test_planner_agent.py  test_planner_bot.py  test_router_roundtrip.py  test_session_manager.py  test_slack_assistant_agent.py  test_slack_router_gaps.py  test_structured_agent.py  test_structured_intent_parsing.py  test_structured_intent_validation.py  test_task1_implementation.py
tickets/: incorporating_nb_driven_vibecoding_workflow.md  planning_card_deterministic_action_states.md  skeleton_pre_generation.md  timeboxing_constraint_observability_gap.md
workflow_config/: README.md  workflow_preferences.yaml
(+549 files in other folders)
